--- a/demo/package.json
+++ b/demo/package.json
@@ -7,7 +7,8 @@
     "start": "webpack serve --open"
   },
   "dependencies": {
-    "@yireen/squoosh-browser": "1.0.6"
+    "@yireen/squoosh-browser": "1.0.6",
+    "html-webpack-plugin": "^5.5.0"
   },
   "devDependencies": {
     "webpack": "5.51.1",
