--- a/demo/package.json
+++ b/demo/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "demo",
+  "name": "squoosh-browser-demo",
+  "description": "Squoosh Browser Demo",
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
-    "start": "webpack serve --open"
-  },
-  "dependencies": {
-    "@yireen/squoosh-browser": "1.0.6",
-    "html-webpack-plugin": "^5.5.0"
+    "start": "webpack serve --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "devDependencies": {
-    "webpack": "5.51.1",
+    "@yireen/squoosh-browser": "1.0.6",
+    "css-loader": "^6.7.0",
+    "html-webpack-plugin": "^5.5.0",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.7",
+    "typescript": "^4.6.2",
+    "webpack": "^5.70.0",
     "webpack-cli": "4.8.0",
-    "webpack-dev-server": "4.0.0"
+    "webpack-dev-server": "4.0.0",
+    "webpack-merge": "^5.8.0"
   }
 }
